--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 #dev profile is active
 spring.profile=dev
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/wl_09devdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false
-spring.datasource.username=tcj
-spring.datasource.password=P@ssw0rd
+
+#database config
+spring.datasource.initialization-mode=always
+# spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/courierdb
+spring.datasource.username=postgres
+spring.datasource.password=s$cret
