--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/wl_09devdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false
-spring.datasource.username=tcj
-spring.datasource.password=P@ssw0rd
+spring.datasource.url=jdbc:postgresql://localhost:5432/courierdb
+spring.datasource.username=postgres
+spring.datasource.password=s$cret
 
 
 spring.jpa.show-sql=true
