refactored user registeration #2

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/courierdb
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5432/cr_dev_01
 spring.datasource.username=postgres
-spring.datasource.password=s$cret
+spring.datasource.password=password
 
 
 spring.jpa.show-sql=true
