--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-#dev profile is active
-spring.profile=dev
+
 
 #database config
 spring.datasource.initialization-mode=always
-# spring.jpa.generate-ddl=true
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/courierdb
 spring.datasource.username=postgres
 spring.datasource.password=s$cret
+
+#dev profile is active
+spring.profiles.active=dev
