--- a/src/main/resources/db/liquibase.properties
+++ b/src/main/resources/db/liquibase.properties
@@ -1,5 +1,7 @@
-changeLogFile: src/main/resources/db/changelog/changelog-master.yaml
-outputChangeLogFile:src/main/resources/db/changelog/changelog-1.0.structure.yaml
-#url: jdbc:postgresql://localhost:5432/cr_dev_01
-#username: postgres
-#password: password
+changeLogFile=src/main/resources/db/changelog/changelog-master.yaml
+diffChangeLogFile=/src/main/resources/db/changelog/changelog-1.0.structure.diff.yaml
+outputChangeLogFile=src/main/resources/db/changelog/changelog-1.0.structure.yaml
+referenceUrl=hibernate:spring:com.initgrep.cr.msauth.user.entity?dialect=org.hibernate.dialect.PostgreSQLDialect
+url= jdbc:postgresql://localhost:5432/cr_dev_01
+username= postgres
+password= password
