feat(CSP-166109844): auth changes
- added config to allow all endpoints for now
- added context-path to allow /api/v1/${appname} as prefix to all apis

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,10 @@
 
-#database config
+server:
+  servlet:
+    context-path: /api/v1/${spring.application.name}/
 spring:
+  application:
+    name: auth
   datasource:
     url: jdbc:postgresql://localhost:5432/cr_dev_01
     username: postgres
