--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,4 +1,9 @@
+server:
+  servlet:
+    context-path: /api/v1/${spring.application.name}/
 spring:
+  application:
+    name: auth
   datasource:
     url: jdbc:postgresql://localhost:5432/cr_dev_01
     username: postgres
