--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,6 +1,10 @@
 
-#spring.jpa.hibernate.ddl-auto=create-drop
+server:
+  servlet:
+    context-path: /api/v1/${spring.application.name}/
 spring:
+  application:
+      name: auth
   datasource:
     url: jdbc:postgresql://localhost:5432/cr_dev_01
     username: postgres
