--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
 
 
   security:
+    name: snyk vulnerability scan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
