--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,14 +68,6 @@ jobs:
   code_analysis:
     name: SonarQube code analysis
     runs-on: ubuntu-latest
-#    steps:
-#      - name: Checking out
-#        uses: actions/checkout@v3
-#        with:
-#          # Disabling shallow clone is recommended for improving relevancy of reporting
-#          fetch-depth: 0
-#      - name: SonarQube Scan
-#        uses: kitabisa/sonarqube-action@v1.2.0
-#        with:
-#          host: ${{ secrets.SONARQUBE_HOST }}
-#          login: ${{ secrets.SONARQUBE_TOKEN }}
+    steps:
+      - run: |
+          echo "code analysis not implemented yet"
