--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,13 +1,9 @@
 on:
-  pull_request:
+  push:
     branches:
       - 'release-**'
-    types:
-      - opened
-      - reopened
-      - synchronize
-run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
-name: Pull Request Checks
+run-name: Tagging by (${{ github.actor }}) Event - [${{ github.event_name }}]
+name: Create Release Tag
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -78,6 +74,16 @@ jobs:
     steps:
       - run: |
           echo "code analysis not implemented yet"
+  tagging:
+    name: create release tag
+    runs-on: ubuntu-latest
+    needs:
+      - test
+      - security
+      - analysis
+    steps:
+      - run: |
+          echo "we are running tagging"
     
 
 
