--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
     steps:
       - run: |
           echo "code analysis not implemented yet"
-  tagging:
+  tag-and-release:
     name: create release tag
     runs-on: ubuntu-latest
     needs:
@@ -94,6 +94,6 @@ jobs:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
-    
+
 
 
