--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - 'release-**'
-run-name: Tagging by (${{ github.actor }}) Event - [${{ github.event_name }}]
+run-name: Release by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Create Release Tag
 jobs:
   test:
@@ -77,10 +77,10 @@ jobs:
   tag-and-release:
     name: create release tag
     runs-on: ubuntu-latest
-    needs:
-      - test
-      - security
-      - analysis
+#    needs:
+#      - test
+#      - security
+#      - analysis
     steps:
       - uses: actions/checkout@v3
       - name: Bump version and push tag
@@ -88,7 +88,7 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          dry_run: true
+          custom_tag: tng
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
