--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: tng
+          dry_run: true
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
