--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,14 @@
 on:
-  push:
+#  push:
+#    branches:
+#      - 'release-**'
+  pull_request:
     branches:
       - 'release-**'
+    types:
+      - opened
+      - reopened
+      - synchronize
 run-name: Release by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Create Release Tag
 jobs:
