--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 on:
-#  push:
-#    branches:
-#      - 'release-**'
+  push:
+    branches:
+      - 'release-**'
   pull_request:
     branches:
       - 'release-**'
