--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,12 +96,15 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           dry_run: true
+          append_to_pre_release_tag: ''
+          create_annotated_tag: true
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
+          dry_run: true
 
 
 
