--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,7 +98,7 @@ jobs:
           dry_run: true
           append_to_pre_release_tag: ''
           create_annotated_tag: true
-          release_branches: master,main,release_**
+          release_branches: master,main,release_*
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
