--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
     branches:
-      - 'releaselaksdlskad-**'
+      - 'release-**'
     types:
       - opened
       - reopened
