--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -5,7 +5,11 @@ server:
 spring:
   application:
     name: auth
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/cr_dev_01
-#    username: postgres
-#    password: password
+
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.PostgreSQL95Dialect
