--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,4 @@ run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Pull Request Checks
 jobs:
  build:
-   uses: common.yml
+   uses: common.yml@main
