--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -5,6 +5,7 @@ on:
         required: true
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
