--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
     branches:
-      - 'release-**'
+      - main
     types:
       - opened
       - reopened
@@ -10,4 +10,5 @@ run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Pull Request Checks
 jobs:
  build:
-   uses: common.yml@main
+   uses: ./.github/workflows/common.yml
+   secrets: inherit
