--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -1,7 +1,11 @@
 on:
   workflow_call:
+    secrets:
+      SNYK_TOKEN:
+        required: true
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -53,7 +57,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   security:
-    name: snyk vulnerability scan
+    name: Vulnerability Scan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -65,7 +69,7 @@ jobs:
           args: --severity-threshold=high
 
   analysis:
-    name: SonarQube code analysis
+    name: Code Analysis
     runs-on: ubuntu-latest
     steps:
       - run: |
