--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,12 @@ on:
     branches:
       - main
 run-name: Deploy by (${{ github.actor }}) Event - [${{ github.event_name }}]
-name: Create Release Tag
+name: Deployment
 jobs:
   build:
     uses: ./.github/workflows/common.yml
     secrets: inherit
-    
+
   tag-and-release:
     name: create release tag
     runs-on: ubuntu-latest
@@ -36,7 +36,7 @@ jobs:
     name: Deploy to dev, staging and uat environments
     runs-on: ubuntu-latest
     needs:
-      tag-and-release
+      - tag-and-release
     steps:
       - run: |
           echo "deployment not implemented yet"
