--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,15 +9,8 @@ on:
 run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Pull Request Checks
 jobs:
- build:
-   uses: ./.github/workflows/common.yml
-   secrets: inherit
- example1:
-   runs-on: ubuntu-latest
-   needs:
-     - test
-     - security
-     - analysis
-   steps:
-     - run: |
-         echo "Running example1"
+  build:
+    steps:
+      - uses: ./.github/workflows/test.yml
+      - uses: ./.github/workflows/analysis.yml
+        secrets: inherit
