--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,16 +6,16 @@ run-name: Deploy by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Deployment
 jobs:
   build:
-    uses: ./.github/workflows/common.yml
-    secrets: inherit
+    steps:
+      - uses: ./.github/workflows/test.yml
+      - uses: ./.github/workflows/analysis.yml
+        secrets: inherit
 
   tag-and-release:
     name: create release tag
     runs-on: ubuntu-latest
     needs:
-      - test
-      - security
-      - analysis
+      - build
     steps:
       - uses: actions/checkout@v3
       - name: Bump version and push tag
@@ -33,13 +33,9 @@ jobs:
           body: ${{ steps.tag_version.outputs.changelog }}
 
   deploy:
-    name: Deploy to dev, staging and uat environments
+    name: deploy in development, staging and uat environments
     runs-on: ubuntu-latest
-    needs:
-      - tag-and-release
     steps:
       - run: |
-          echo "deployment not implemented yet"
-
-
+          echo "development not implemented yet"
 
