--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ on:
 run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Pull Request Checks
 jobs:
-  build:
-    steps:
-      - uses: ./.github/workflows/test.yml
-      - uses: ./.github/workflows/analysis.yml
-        secrets: inherit
+  test:
+    uses: ./.github/workflows/test.yml
+  analysis:
+    uses: ./.github/workflows/analysis.yml
+    secrets: inherit
