--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,12 @@ jobs:
   analysis:
     uses: ./.github/workflows/analysis.yml
     secrets: inherit
+
+  example:
+    runs-on: ubuntu-latest
+    needs:
+      - test
+      - analysis
+    steps:
+      - run: |
+          echo "example job here"
