--- a/.github/workflows/reusable/release-tag.yml
+++ b/.github/workflows/reusable/release-tag.yml
@@ -1,16 +1,6 @@
 on:
-  push:
-    branches:
-      - main
-run-name: Deploy by (${{ github.actor }}) Event - [${{ github.event_name }}]
-name: Deployment
+  workflow_call:
 jobs:
-  build:
-    steps:
-      - uses: ./.github/workflows/test.yml
-      - uses: ./.github/workflows/analysis.yml
-        secrets: inherit
-
   tag-and-release:
     name: create release tag
     runs-on: ubuntu-latest
@@ -32,10 +22,4 @@ jobs:
           name: Release ${{ steps.tag_version.outputs.new_tag }}
           body: ${{ steps.tag_version.outputs.changelog }}
 
-  deploy:
-    name: deploy in development, staging and uat environments
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo "development not implemented yet"
 
