--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -6,22 +6,22 @@ run-name: Deploy by (${{ github.actor }}) Event - [${{ github.event_name }}]
 name: Deployment
 jobs:
   analysis:
-    uses: ./.github/workflows/reusable/analysis.yml
+    uses: ./.github/workflows/analysis.yml
     secrets: inherit
 
   test:
-    uses: ./.github/workflows/reusable/test.yml
+    uses: ./.github/workflows/test.yml
     needs:
       - analysis
 
   release-tag:
-    uses: ./.github/workflows/reusable/release-tag.yml
+    uses: ./.github/workflows/release-tag.yml
     needs:
       - test
       - analysis
 
   deploy:
-    uses: ./.github/workflows/reusable/deploy.yml
+    uses: ./.github/workflows/deploy.yml
     needs:
       - test
       - analysis
