--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,45 +1,11 @@
 on:
-  push:
-    branches:
-      - main
-run-name: Deploy by (${{ github.actor }}) Event - [${{ github.event_name }}]
-name: Deployment
+  workflow_call:
 jobs:
-  build:
-    uses: ./.github/workflows/common.yml
-    secrets: inherit
-
-  tag-and-release:
-    name: create release tag
-    runs-on: ubuntu-latest
-    needs:
-      - test
-      - security
-      - analysis
-    steps:
-      - uses: actions/checkout@v3
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          dry_run: true
-          release_branches: main
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
-
   deploy:
-    name: Deploy to dev, staging and uat environments
+    name: deploy in development, staging and uat environments
     runs-on: ubuntu-latest
-    needs:
-      - tag-and-release
     steps:
       - run: |
-          echo "deployment not implemented yet"
-
+          echo "development not implemented yet"
 
 
