--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -14,16 +14,16 @@ jobs:
     needs:
       - analysis
 
-  release-tag:
-    uses: ./.github/workflows/release-tag.yml
-    needs:
-      - test
-      - analysis
-
-  deploy:
-    uses: ./.github/workflows/deploy.yml
-    needs:
-      - test
-      - analysis
-      - release-tag
+#  release-tag:
+#    uses: ./.github/workflows/release-tag.yml
+#    needs:
+#      - test
+#      - analysis
+#
+#  deploy:
+#    uses: ./.github/workflows/deploy.yml
+#    needs:
+#      - test
+#      - analysis
+#      - release-tag
 
