--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -14,13 +14,13 @@ jobs:
     needs:
       - analysis
 
-  release-tag:
-    uses: ./.github/workflows/release-tag.yml
-    needs:
-      - test
-    
+#  release-tag:
+#    uses: ./.github/workflows/release-tag.yml
+#    needs:
+#      - test
+
   deploy:
     uses: ./.github/workflows/deploy.yml
     needs:
-      - release-tag
+      - test
 
