--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -14,10 +14,10 @@ jobs:
     needs:
       - analysis
 
-#  release-tag:
-#    uses: ./.github/workflows/release-tag.yml
-#    needs:
-#      - test
+  release-tag:
+    uses: ./.github/workflows/release-tag.yml
+    needs:
+      - test
 
   deploy:
     uses: ./.github/workflows/deploy.yml
