--- a/.github/workflows/release-tag.yml
+++ b/.github/workflows/release-tag.yml
@@ -2,7 +2,7 @@ on:
   workflow_call:
 jobs:
   tag-and-release:
-    name: create release tag
+    name: Tagging and Release
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
