matrix deployment workflow #1

--- a/.github/workflows/deployment-workflow.yml
+++ b/.github/workflows/deployment-workflow.yml
@@ -20,9 +20,12 @@ jobs:
       - test
 
   deploy:
+    strategy:
+      matrix:
+        target: [ dev, sit, uat, prod ]
     uses: ./.github/workflows/deploy.yml
     with:
-      environment-name: "Development"
+      target-environment: ${{ matrix.target }}
     needs:
       - release-tag
 
