--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,15 @@
 on:
   workflow_call:
     inputs:
-      environment-name:
+      target-environment:
         required: true
         type: string
 jobs:
   deploy:
-    name: Deployment in ${{inputs.environment-name}}
+    name: Deployment in ${{inputs.target-environment}}
     runs-on: ubuntu-latest
     steps:
       - run: |
-          echo "Deployment done in ${{inputs.environment-name}}"
+          echo "Deployment done in ${{inputs.target-environment}}"
 
 
