--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,3 +1,4 @@
+name: Deployment
 on:
   workflow_call:
     inputs:
@@ -5,10 +6,9 @@ on:
         required: true
         type: string
 jobs:
-  deploy:
+  deployment:
     name: Deployment in ${{inputs.target-environment}}
     runs-on: ubuntu-latest
-    if: inputs.target-environment == 'dev'
     steps:
       - run: |
           echo "Deployment done in ${{inputs.target-environment}}"
