--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -1,3 +1,4 @@
+name: Build
 on:
   pull_request:
     branches:
@@ -7,7 +8,6 @@ on:
       - reopened
       - synchronize
 run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
-name: Pull Request Checks
 jobs:
   test:
     uses: ./.github/workflows/test.yml
