--- a/.github/workflows/publish-workflow.yml
+++ b/.github/workflows/publish-workflow.yml
@@ -2,8 +2,8 @@ on:
   push:
     branches:
       - main
-run-name: Deploy by (${{ github.actor }}) Event - [${{ github.event_name }}]
-name: Deployment
+run-name: Publish by (${{ github.actor }}) Event - [${{ github.event_name }}]
+name: Publish
 jobs:
   analysis:
     uses: ./.github/workflows/analysis.yml
@@ -19,11 +19,11 @@ jobs:
     needs:
       - test
 
-  deploy:
+  deployment:
     strategy:
       matrix:
         target: [ dev, sit, uat, prod ]
-    uses: ./.github/workflows/deploy.yml
+    uses: ./.github/workflows/deployment.yml
     with:
       target-environment: ${{ matrix.target }}
     needs:
