--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,16 +2,11 @@ name: Test
 on:
   workflow_call:
 jobs:
-  # Label of the container job
-  container-job:
-    # Containers must run in Linux based operating systems
+  test:
+    name: Test
     runs-on: ubuntu-latest
-    # Docker Hub image that `container-job` executes in
-    container: node:10.18-jessie
-
-    # Service containers to run with `container-job`
+    container: maven:3.8.6-eclipse-temurin-11-alpine
     services:
-      # Label used to access the service container
       postgres:
         # Docker Hub image
         image: postgres
@@ -24,19 +19,16 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-  test:
-    name: Test
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin' # See 'Supported distributions' for available options
-          java-version: '11'
+#      - uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin' # See 'Supported distributions' for available options
+#          java-version: '11'
       - name: run maven tests
         run: mvn -B clean test
         env:
-          POSTGRES_DB_PATH: "jdbc:postgresql://localhost:5432/postgres"
+          POSTGRES_DB_PATH: "jdbc:postgresql://postgres:5432/postgres"
           POSTGRES_DB_USERNAME: "postgres"
           POSTGRES_DB_PASSWORD: "password"
       - name: Generate Jacoco Badge
