--- a/.github/workflows/test-container.yml
+++ b/.github/workflows/test-container.yml
@@ -5,31 +5,32 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    container: maven:3.8.6-eclipse-temurin-11-alpine
     services:
       postgres:
+        # Docker Hub image
         image: postgres
+        # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: password
+        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports:
-          - 5432:5432
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin' # See 'Supported distributions' for available options
-          java-version: '11'
+#      - uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin' # See 'Supported distributions' for available options
+#          java-version: '11'
       - name: run maven tests
         run: mvn -B clean test
         env:
-          POSTGRES_DB_PATH: "jdbc:postgresql://localhost:5432/postgres"
+          POSTGRES_DB_PATH: "jdbc:postgresql://postgres:5432/postgres"
           POSTGRES_DB_USERNAME: "postgres"
-          POSTGRES_DB_PASSWORD: "postgres"
-
+          POSTGRES_DB_PASSWORD: "password"
       - name: Generate Jacoco Badge
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
