--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -9,8 +9,9 @@ on:
       - synchronize
 run-name: Build by (${{ github.actor }}) Event - [${{ github.event_name }}]
 jobs:
-  test:
-    uses: ./.github/workflows/test.yml
-  analysis:
+  build-analysis:
     uses: ./.github/workflows/analysis.yml
     secrets: inherit
+
+  build-test:
+    uses: ./.github/workflows/test.yml
