--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deployment:
     name: Deployment in ${{inputs.target-environment}}
+    environment: ${{inputs.target-environment}}
     runs-on: ubuntu-latest
     steps:
       - run: |
