--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     permissions:
-      actions: read|write
+      actions: write
     services:
       postgres:
         image: postgres
