--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 										<limit>
 											<counter>COMPLEXITY</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0</minimum>
+											<minimum>.95</minimum>
 										</limit>
 									</limits>
 								</rule>
