--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,17 +22,10 @@ spring:
   cache:
     type: none
 
-
-access-token:
-  public: ${ACCESS_TOKEN_PUBLIC_KEY_PATH}
-  private: ${ACCESS_TOKEN_PRIVATE_KEY_PATH}
-refresh-token:
-  public: ${REFRESH_TOKEN_PUBLIC_KEY_PATH}
-  private: ${REFRESH_TOKEN_PRIVATE_KEY_PATH}
-
   #Logging
 logging:
   level:
+    root: debug
     org.hibernate.SQL: DEBUG
     org.hibernate.type: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
@@ -45,8 +38,14 @@ log4j:
 
 #application variables
 app:
+  key-pair:
+    dir: token-keys
   access-token:
+    public-path: ${ACCESS_TOKEN_PUBLIC_KEY_PATH}
+    private-path: ${ACCESS_TOKEN_PRIVATE_KEY_PATH}
     expiry-duration-min: ${APP_ACCESS_TOKEN_EXPIRY_DURATION_MIN}
   refresh-token:
+    public-path: ${REFRESH_TOKEN_PUBLIC_KEY_PATH}
+    private-path: ${REFRESH_TOKEN_PRIVATE_KEY_PATH}
     expiry-duration-days: ${APP_REFRESH_TOKEN_EXPIRY_DURATION_DAYS}
     min-renewal-days: ${APP_REFRESH_TOKEN_MIN_RENEWAL_DAYS}
