--- a/pom.xml
+++ b/pom.xml
@@ -122,18 +122,18 @@
 								<exclude>**/entity/**</exclude>
 								<exclude>**/MsAuthApplication.class</exclude>
 							</excludes>
-<!--							<rules>-->
-<!--								<rule>-->
-<!--									<element>BUNDLE</element>-->
-<!--									<limits>-->
-<!--										<limit>-->
-<!--											<counter>COMPLEXITY</counter>-->
-<!--											<value>COVEREDRATIO</value>-->
-<!--											<minimum>.95</minimum>-->
-<!--										</limit>-->
-<!--									</limits>-->
-<!--								</rule>-->
-<!--							</rules>-->
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>COMPLEXITY</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>.95</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
 						</configuration>
 					</execution>
 				</executions>
